# eigsep-sensors

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
bno085_pico/: CMakeLists.txt  main.cpp
data/: pico_pid_log.csv
eigsep-accelerometer/: accelerometer.py
eigsep_pico/: CMakeLists.txt  hbridge_peltier.c  hbridge_peltier.h  main.c  read_temp.c  read_temp.h  runtime_cmd.c  screenlog.0
eigsep_sensors/: __init__.py  accel_orientation.py  accelerometer.py  lidar.py
grf250_pico/: CMakeLists.txt  main.c
notebooks/: imu_data_test.ipynb  may21_pico_hyst_test.ipynb  may23_lna_trx_thermal_test.ipynb
notebooks/data/: imu.csv  imu_new.csv  pico_pid_lna_test.csv  pico_pid_lna_trx__temp31_3dbfattn.csv  pico_pid_lna_trx__temp36_3dbfattn.csv  pico_pid_lna_trx__temp41_3dbfattn.csv  pico_pid_log.csv  pico_pid_log_may23.csv  pid_test1.csv  pid_test2.csv  pid_test3.csv  serial_log.csv
peltier_pico/: CMakeLists.txt  build_it.sh  hbridge_peltier.c  hbridge_peltier.h  main.c  read_temp.c  read_temp.h
scripts/: .therm_probe_test.py.swp  config.py  eigsep_accelerometer_readout.py  eigsep_tfluna_lidar_readout.py  host_logger.py  main.py  pico_pid_log.csv  pid_control.py  pid_simulation.py  simple_serial_read.py  test.py  therm_probe_test.py
scripts/accelerometer/: eigsep_accelerometer_readout.py
scripts/imu/: __init__.mpy  __init__.py  bno085_code.py  bno085_read.py  i2c.mpy  i2c.py  mma8451_code.py  mma8451_read.py  mma8451_readout.py
scripts/lidar/: grf250_main.py  tfluna_main.py
scripts/peltier/: host_logger.py  pico_pid_log.csv  picoctl.py  picoser.py
scripts/peltier/reference_scripts/: config.py  pid_control.py  pid_simulation.py
scripts/thermistor/: main.py  read_temp.py  rpi_poll.py
scripts/thermistor/test_scripts/: test.py  therm_probe_test.py
src/accelerometer/: __init__.py
src/eigsep_sensors/: __init__.py
src/eigsep_sensors/accelerometer/: __init__.py  accel_orientation.py  accelerometer.py
src/eigsep_sensors/imu/: __init__.py  imu.py  imu_mma8451_orientation.py
src/eigsep_sensors/lidar/: README.md  __init__.py  lidar.py
src/eigsep_sensors/peltier/: temperature_controller.py
src/eigsep_sensors/testing/: __init__.py  thermistor.py
src/eigsep_sensors/thermistor/: __init__.py  constants.py  thermistor.py
tests/: test_accelerometer.py  test_imu_.py  test_imu_bno085.py  test_imu_math.py  test_imu_mma8451.py  test_lidar.py  test_lidar_grf250.py  test_lidar_tfluna.py  test_temperature_controller.py  test_thermistor.py
