[aliases]
test=pytest

[metadata]
name = eigsep_sensors
version = 0.0.1
description = Software to control EIGSEP sensors
url = https://github.com/EIGSEP/eigsep-sensors
author = Pranav Karthik
author_email = pranavkarthik@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
