[aliases]
test=pytest

[metadata]
name = eigsep_sensors
version = 0.0.1
description = Software to control EIGSEP sensors
url = https://github.com/EIGSEP/eigsep-sensors
author = Pranav Karthik
author_email = pranavkarthik@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:
install_requires =
    numpy>=1.21.0
    adafruit-circuitpython-mma8451>=1.0.0
    board>=1.0
    smbus2

[options.extras_require]
dev = 
    black
    flake8
    pytest
    pytest-cov

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
